fix styling in posts to remove gaps between image and container

--- a/app/assets/stylesheets/modal.css
+++ b/app/assets/stylesheets/modal.css
@@ -38,14 +38,14 @@
   transition: all 150ms ease-in;
 }
 
-.modal-comment-div.comment-form-div {
+.modal-comment-div {
   display: flex;
   justify-content: center;
   width: 400px;
   height: 0px;
 }
 
-.comment-field.modal-comment-field {
+.modal-comment-field {
   position: static;
   text-align: center;
 }
